# rpc-wine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  discord-rpc.spec
.circleci/: config.yml
src/: discord_defs.hh  io_thread.cc  io_thread.hh  library.cpp  library.h  rpc_register.cc  rpc_register.hh  rpc_wine.cc  rpc_wine.hh  utils.cc
src/common/: discord_defs.hh  message_queue.hh  rpc_register.cc
src/connections/: connection.cc  connection.hh  io_thread.cc  io_thread.hh  rpc_connection.cc  rpc_connection.hh
src/serialization/: allocators.cc  allocators.hh  serialization.cc  serialization.hh  writers.cc  writers.hh
src/utils/: backoff.cc  backoff.hh  utils.hh
